# shelter-pulse

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  tox.ini
.github/: CODEOWNERS  README.md  pull_request_template.md  workflows.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cd.yml  ci-python.yml  ci-ui.yml  ci.yml  deploy.yml  promote.yml  release.yml
.kiro/: README.md
.kiro/agents/: DIRECTOR.md  ORCHESTRATOR-PHASE-2.md  ORCHESTRATOR.md  PLANNER.md  SHARED.md  worker-api.md  worker-cli.md  worker-core-a.md  worker-core-b.md  worker-core-c.md  worker-core-d.md  worker-deployment.md  worker-queue.md  worker-terraform.md  worker-ui.md
.kiro/docs/: next-steps.md  playbook-issue-workflow.md  playbook-local-dev.md  playbook-pr-cicd.md  pr-commit-plan.md
.kiro/steering/: architecture.md  ponytail.md  product.md  rules.md  structure.md  tech.md
deploy/: nginx-app.conf  start.sh
docker/: rabbitmq.Dockerfile
docs/: aws-async-infra.md  demo-script.md  design-decisions.md  docker-local-testing.md  kiro.md  post-merge-backlog.md
docs/adr/: 001-python-3.12.md  002-nextjs-react-tailwind.md  (+11 more)
infra/: backend.hcl
lambda/: Dockerfile  handler.py
scenarios/: whisker_haven.yaml
scripts/: precompute_demo.py  smoke_test.py
security/: README.md  npm-audit.json  pip-audit.json
shelterpulse/: __init__.py
ui/: AGENTS.md  cypress.config.ts  nginx.conf  package-lock.json  package.json
ui/src/: api.ts  (+1 more)
(+86 files in other folders)
